# 6122Snakebee

./: CMakeLists.txt  PlaySound.h  README.md  SoundPlay.cpp  SoundPlay.h  main  main.cpp  neural.cpp  readme.txt  test  weights.txt
Weights/: weight_0501s.txt
